@@ -1,7 +1,8 @@
-package ca.bc.gov.health.qa.autotest.plr.web.pages.plr.facility;
+package ca.bc.gov.health.qa.autotest.plr.web.pages.plr.facility.search;
 
 import java.util.List;
 import java.util.ArrayList;
+import java.util.Objects;
 
 import ca.bc.gov.health.qa.autotest.runner.util.selenium.SeleniumSession;
 import ca.bc.gov.health.qa.autotest.runner.util.selenium.pages.BasicWebPageFragment;
@@ -74,11 +75,9 @@ public class SearchFacilityResultsFragment extends BasicWebPageFragment
     public WebElement findResultsRow(int index)
     {
         WebElement row;
-        By rowLocator = By.cssSelector(
-                new StringBuilder("tr[data-ri='").append(index).append("']").toString()
-        );
+        By rowLocator = By.cssSelector("tr[data-ri='" + index + "']");
         List<WebElement> rowList = findResultsTableData().findElements(rowLocator);
-        if (rowList.size() == 1) row = rowList.get(0);
+        if (rowList.size() == 1) row = rowList.getFirst();
         else
         {
             String msg = String.format("Failed to retrieve search results (row index: %s).", index);
@@ -145,6 +144,24 @@ public class SearchFacilityResultsFragment extends BasicWebPageFragment
     }
 
     /**
+     * Gets the identifiers for each record in the search results
+     * The (IFC) tag is discarded in the results.
+     *
+     * @return  a list of strings with each identifier in the search results
+     */
+    public List<String> getIdentifierList()
+    {
+        List<String> identifierList = new ArrayList<>();
+        for (int idCount = 0; idCount < grabResultsRowCount(); idCount++)
+        {
+            String identifier = getResultsRow(idCount).get(1);
+            identifier = identifier.substring(0, identifier.indexOf(" (IFC)"));
+            identifierList.add(identifier);
+        }
+        return identifierList;
+    }
+
+    /**
      * Gets the civic addresses for each record in the search results
      * The country is discarded in the results, see comments for explanation
      *
@@ -190,10 +207,10 @@ public class SearchFacilityResultsFragment extends BasicWebPageFragment
      */
     public boolean verifyWordWrapStyle(int rowIndex)
     {
-        WebElement test = findResultsRow(rowIndex);
-        boolean expectedWhiteSpace = test.findElement(By.cssSelector("td")).getAttribute("style")
+        WebElement test = findResultsRow(rowIndex).findElement(By.cssSelector("td"));
+        boolean expectedWhiteSpace = Objects.requireNonNull(test.getAttribute("style"))
                 .contains("white-space: normal");
-        boolean expectedWordBreak = test.findElement(By.cssSelector("td")).getAttribute("style")
+        boolean expectedWordBreak = Objects.requireNonNull(test.getAttribute("style"))
                 .contains("word-break: break-all");
         return expectedWhiteSpace && expectedWordBreak;
     }
